welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: overloaded method value min with alternatives:
  (x$1: Double,x$2: Double)Double <and>
  (x$1: Float,x$2: Float)Float <and>
  (x$1: Long,x$2: Long)Long <and>
  (x$1: Int,x$2: Int)Int
 cannot be applied to (Int)
  for (i <- 0 to (Math.min(nums.length -1),4)) {b = b || nums(i)==9}
                       ^